# whisper-to-me

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml  pyrightconfig.json  whisper_to_me.py
.github/workflows/: ci.yml  publish.yml  reusable-build.yml
src/: audio_device_manager.py  audio_exceptions.py  audio_recorder.py  component_factory.py  config.py  config_constants.py  hotkey_manager.py  keystroke_handler.py  menu_builder.py  profile_manager.py  single_instance.py  speech_processor.py  tray_icon.py  whisper_client.py
tests/: conftest.py  test_application_state_manager.py  test_audio_device_manager.py  test_audio_exceptions.py  test_audio_recorder.py  test_component_factory.py  test_config.py  test_config_validator.py  test_display_backend.py  test_hotkey_manager.py  test_key_combinations.py  test_keystroke_handler.py  test_logger.py  test_menu_builder.py  test_profile_manager.py  test_single_instance.py  test_speech_processor.py  test_text_processor.py  test_tray_icon.py
whisper_to_me/: __init__.py  application_state_manager.py  audio_device_manager.py  audio_exceptions.py  audio_recorder.py  component_factory.py  config.py  config_constants.py  config_differ.py  config_validator.py  display_backend.py  hotkey_manager.py  keystroke_handler.py  logger.py  main.py  menu_builder.py  profile_manager.py  single_instance.py  speech_processor.py  text_processor.py  tray_icon.py
