[project]
name = "whisper-to-me"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.1.1",
    "numpy>=2.3.1",
    "pynput>=1.8.1",
    "pyyaml>=6.0.2",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
]
